[tool.poetry]
name = "fmlkit"
version = "0.1.0"
description = ""
authors = ["Marcin <marcin@pucilowski.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
vectorbtpro = {path = "../../vectorbtpro"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
